--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="info">
-      <h2>About This Site</h2>
+      <h2>About asdfThis Site</h2>
       <p>This is a simple authentication demo that shows:</p>
       <ul>
         <li>User registration</li>
