--- a/profile.html
+++ b/profile.html
@@ -20,6 +20,12 @@
       <p id="userPostcode">Postleitzahl: <span id="postcode">Test Postleitzahl</span></p>
       <p id="userCity">Ort: <span id="city">Test Ort</span></p>
 
+      <section id="addAdditionalInfo">
+        <h2>Zusätzliche Informationen</h2>
+        <input type="text" id="inputFirstName" placeholder="Vorname" />
+        <input type="text" id="inputLastName" placeholder="Nachname" />
+      </section>
+      <button id="btnSaveAdditionalInfos">Speichern</button> 
 
 
     <button id="logoutBtn">Logout</button>
@@ -27,4 +33,5 @@
     <script type="module" src="js/profile.js"></script>
     <script src="js/logout.js"></script>
   </body>
+  
 </html>
