--- a/übersicht.html
+++ b/übersicht.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-   <header>
+<header>
   <div class="header-content">
     <h1>Ihre Übersicht</h1>
     <button class="info-button">i</button>
@@ -17,7 +17,6 @@
   <a href="personalien.html" class="next-button">Weiter</a>
   <div class="header-line"></div>
 </header>
-
     <main>
       <ul class="list">
         <li>Personalien <span>0/7</span></li>
@@ -31,13 +30,14 @@
       <button class="finish-button">Abschliessen</button>
     </main>
 
-    <footer>
-      <nav>
-        <a href="#">Willkommen</a>
-        <a href="index.html" class="active">Übersicht</a>
-        <a href="#">Konto</a>
-      </nav>
+
+      <footer>
+      <div class="footer-nav">
+        <a class="nav-item" href="#"><img src="Images/Person.png" /><span>Konto</span></a>
+        <a class="nav-item" href="#"><img src="Images/List.png" /><span>Übersicht</span></a>
+        <a class="nav-item" href="#"><img src="Images/Heart.png" /><span>Willkommen</span></a>
+      </div>
     </footer>
-  </div>
+</div>
 </body>
 </html>
