--- a/personalien.html
+++ b/personalien.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <title>Protected Page</title>
@@ -16,14 +16,13 @@
       <input type="text" id="inputPostcode" placeholder="PLZ" />
       <input type="text" id="inputCity" placeholder="Ort" />
       <input type="text" id="inputPhone" placeholder="Telefon" />
-      <input type="email" id="inputEmail" placeholder="E-Mail" />
 
-      <button id="btnSaveAdditionalInfo">Speichern & Weiter</button>
+      <button id="btnSave">Speichern & Weiter</button>
+      <p id="fehlermeldung"></p>
     </section>
 
 
     <script type="module" src="js/profile.js"></script>
-    <script src="js/logout.js"></script>
   </body>
   
 </html>
