--- a/medizinische-behandlung.html
+++ b/medizinische-behandlung.html
@@ -9,10 +9,13 @@
 <body>
   <div class="container">
     <header>
-      <a href="personalien.html">Zurück</a>
-      <h1>Medizinische Behandlung (1/7)</h1>
-      <a href="#">Weiter</a>
-    </header>
+  <div class="header-content">
+    <h1>Medizinische Behandlung (1/7)</h1>
+    <button class="info-button">i</button>
+  </div>
+  <a href="personalien.html" class="next-button">Weiter</a>
+  <div class="header-line"></div>
+</header>
 
     <main>
       <p>Im Folgenden halte ich meine wichtigsten Wertvorstellungen, Überzeugungen und Glaubenssätze fest...</p>
@@ -25,11 +28,11 @@
     </main>
 
     <footer>
-      <nav>
-        <a href="#">Willkommen</a>
-        <a href="index.html">Übersicht</a>
-        <a href="#">Konto</a>
-      </nav>
+      <div class="footer-nav">
+        <a class="nav-item" href="#"><img src="Images/Person.png" /><span>Konto</span></a>
+        <a class="nav-item" href="#"><img src="Images/List.png" /><span>Übersicht</span></a>
+        <a class="nav-item" href="#"><img src="Images/Heart.png" /><span>Willkommen</span></a>
+      </div>
     </footer>
   </div>
 </body>
