--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -18,13 +18,14 @@
 </header>
 
     <main>
+      <h2>Werteerklärung</h2>
       <p>Im Folgenden halte ich meine wichtigsten Wertvorstellungen, Überzeugungen und Glaubenssätze fest...</p>
       <textarea placeholder="Was macht mein Leben heute lebenswert?"></textarea>
       <textarea placeholder="Was bedeutet für Sie Lebensqualität?"></textarea>
       <textarea placeholder="Was kommt Ihnen in den Sinn, wenn Sie ans Sterben denken?"></textarea>
       <textarea placeholder="Gibt es Situationen, in denen Sie nicht mehr lebensverlängernd behandelt werden wollen?"></textarea>
       <button>Speichern & Weiter</button>
-      <a href="#">Zwischenspeichern & Beenden</a>
+      <a href="zwischenspeicher">Zwischenspeichern & Beenden</a>
     </main>
 
     <footer>
