--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Medizinische Behandlungs (5/7)</h1>
+    <h1>Medizinische Behandlungs (2/2)</h1>
     <h2>Therapieziel – ich möchte lebensverlängernde Massnahmen nur bei Erhaltung der Lebensqualität und
         wünsche folgende Behandlungen:</h2>
 
@@ -36,7 +36,7 @@
     </div>
 
   </div>
-  <script src="js/page5.js"></script>
+  <script src="js/medbehandlung2.js"></script>
   </body>
 </html>
 
