--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -12,7 +12,7 @@
   <div class="container">
     <header>
       <div class="header-content">
-        <h1>Medizinische Behandlung (1/7)</h1>
+        <h1>Medizinische Behandlung (1/)</h1>
         <button class="info-button">i</button>
       </div>
       <a href="personalien.html" class="next-button">Weiter</a>
