create , read und auch update von der zweiten seite von medbehandlung programmiert

--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -34,6 +34,11 @@
       <button onclick="answerQuestion('1d', true)">Ja</button>
       <button onclick="answerQuestion('1d', false)">Nein</button>
     </div>
+  <form id="medbehandlung2-form">
+  <!-- Deine Fragen hier als Inputs, z.B. Radio-Buttons oder Ähnliches -->
+  <button id="saveAndNextBtn" type="button">Speichern & Beenden</button>
+  <button id="saveAndExitBtn" type="button">Zwischenspeichern & Beenden</button>
+</form>
 
   </div>
   <script src="js/medbehandlung2.js"></script>
