login/register/willkommen

--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -37,9 +37,9 @@
 
     <footer>
       <div class="footer-nav">
-        <a class="nav-item" href="#"><img src="images/Person.png" /><span>Konto</span></a>
+        <a class="nav-item" href="#"><img src="images/Heart.png" /><span>Konto</span></a>
         <a class="nav-item" href="#"><img src="images/List.png" /><span>Übersicht</span></a>
-        <a class="nav-item" href="#"><img src="images/Heart.png" /><span>Willkommen</span></a>
+        <a class="nav-item" href="#"><img src="images/Person.png" /><span>Willkommen</span></a>
       </div>
     </footer>
   </div>
