--- a/willkommen.html
+++ b/willkommen.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Willkommen</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
-</head>
-<body>
-<img src="images/willkommen.jpg" alt="Willkommen" id="willkommen-bild">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Anmelden</title>
+    <link rel="stylesheet" href="css/stylepage.css" />
+  </head>
+  <body>
+    <div>
+    <img src="images/Logo_Patientenwille_Herz.png" alt="Patientenwille Logo" />
+    </div>
 
-<h1>In wenigen Schritten zu Ihrer Patientenverfügung</h1>
-<p>Gerne erklären wir Ihnen in einem kurzen Erklärvideo, was Sie von unserer Dienstleistung erwarten dürfen.</p>
-<button>Überspringen</button>
-<button>Video schauen</button>
-    
-</body>
+    <h1>Willkommen bei Patienten Wille!</h1>
+
+    <p>Mit Ihrem Konto können Sie Ihre Patientenverfügung einfach und individuell zusammenstellen. Dabei werden Sie von uns Schritt für Schritt begleitet. </p>
+
+    <button id="btnSave" onclick="location.href='register.html'">Mein Konto anlegen</button>
+    <button id="btnSaveBack" onclick="location.href='login.html'">Ich habe bereits ein Konto</button>
+
+    <script src="js/login.js"></script>
+  </body>
 </html>
