--- a/login.html
+++ b/login.html
@@ -6,18 +6,23 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Login</h1>
+    <div>
+      <img src="images/logo-patientenwille-herz.png" alt="Patientenwille Logo" />
+      </div>
+
+    <h1>Bei Patienten Wille anmelden</h1>
 
     <form id="loginForm">
       <div>
-        <label>Email</label>
+        <p>Email</p>
         <input type="email" id="email" required />
       </div>
+      
       <div>
-        <label>Password</label>
+        <p>Password</p>
         <input type="password" id="password" required />
       </div>
-      <button type="submit">Login</button>
+      <button type="submit" >Login</button>
     </form>
 
     <p>Don’t have an account? <a href="register.html">Register here</a>.</p>
