--- a/personalien.html
+++ b/personalien.html
@@ -7,25 +7,42 @@
   </head>
 
   <body>
-    <h1>Personalien</h1>
+    <div class="container">
+      <header>
+        <div class="header-content">
+          <h1>Personalien</h1>
+          <button class="info-button">i</button>
+        </div>
+        <a href="personalien.html" class="next-button">Weiter</a>
+        <div class="header-line"></div>
+      </header>
 
-    <section id="personalien">
-      <p>Vorname</p><input type="text" id="inputFirstName" placeholder="Vorname" />
-      <p>Nachname</p><input type="text" id="inputLastName" placeholder="Nachname" />
-      <p>Geburtstag</p><input type="date" id="inputBirthdate" placeholder="Geburtsdatum" />
-      <p>Strasse</p><input type="text" id="inputStreet" placeholder="Strasse" />
-      <p>PLZ</p><input type="number" id="inputPostcode" placeholder="PLZ" />
-      <p>Ort</p><input type="text" id="inputCity" placeholder="Ort" />
-      <p>E-Mail</p><input type="email" id="inputEmail" readonly>
-      <p>Telefon</p><input type="tel" id="inputPhone" placeholder="Telefon" />
-      
-      <button id="btnSave" onclick="location.href='medizinische-behandlung_1.html'">Speichern & Weiter</button>
-      <button id="btnSaveBack" onclick="location.href='uebersicht.html'">Zwischenspeichern & Beenden</button>
-      <p id="fehlermeldung"></p>
-    </section>
+      <section id="personalien">
+        <p>Vorname</p><input type="text" id="inputFirstName" placeholder="Vorname" />
+        <p>Nachname</p><input type="text" id="inputLastName" placeholder="Nachname" />
+        <p>Geburtstag</p><input type="date" id="inputBirthdate" placeholder="Geburtsdatum" />
+        <p>Strasse</p><input type="text" id="inputStreet" placeholder="Strasse" />
+        <p>PLZ</p><input type="number" id="inputPostcode" placeholder="PLZ" />
+        <p>Ort</p><input type="text" id="inputCity" placeholder="Ort" />
+        <p>E-Mail</p><input type="email" id="inputEmail" readonly>
+        <p>Telefon</p><input type="tel" id="inputPhone" placeholder="Telefon" />
+        
+        <button id="btnSave" onclick="location.href='medizinische-behandlung_1.html'">Speichern & Weiter</button>
+        <button id="btnSaveBack" onclick="location.href='uebersicht.html'">Zwischenspeichern & Beenden</button>
+        <p id="fehlermeldung"></p>
+      </section>
+
+      <footer>
+        <div class="footer-nav">
+          <a class="nav-item" href="#"><img src="images/Heart.png" /><span>Konto</span></a>
+          <a class="nav-item" href="#"><img src="images/List.png" /><span>Übersicht</span></a>
+          <a class="nav-item" href="#"><img src="images/Person.png" /><span>Willkommen</span></a>
+        </div>
+      </footer>
 
 
-    <script type="module" src="js/profile.js"></script>
+      <script type="module" src="js/profile.js"></script>
+    </div>
   </body>
   
 </html>
