--- a/startseite.html
+++ b/startseite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Willkommen</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/stylepage.css">
 </head>
 <body>
 <img src="images/willkommen.jpg" alt="Willkommen" id="willkommen-bild">
