--- a/uebersicht.html
+++ b/uebersicht.html
@@ -35,9 +35,9 @@
 
       <footer>
       <div class="footer-nav">
-        <a class="nav-item" href="#"><img src="images/Heart.png" /><span>Konto</span></a>
-        <a class="nav-item" href="#"><img src="images/List.png" /><span>Übersicht</span></a>
-        <a class="nav-item" href="#"><img src="images/Person.png" /><span>Willkommen</span></a>
+        <a class="nav-item" href="#"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
+        <a class="nav-item" href="#"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
+        <a class="nav-item" href="#"><img src="images/navKonto.svg" /><span>Konto</span></a>
       </div>
       </footer>
 </div>
