Design Login, Register und Fehlerbehebungs-Versuch der Personalien

--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <title>Login</title>
+    <title>Medizinische Behandlung 2</title>
     <link rel="stylesheet" href="css/stylepage.css" />
   </head>
 
@@ -30,7 +30,7 @@
         </div>
   
         <div class="question" data-id="1b" data-depends="1a">
-          <p class="medbehandlung2_questions">b. Künstliche Beatmung über einen Schlauch (in der Regel über den Mund in die Luftröhre, medizinisch: Tubus, Intubation)</p>
+          <p>b. Künstliche Beatmung über einen Schlauch (in der Regel über den Mund in die Luftröhre, medizinisch: Tubus, Intubation)</p>
           <button onclick="answerQuestion('1b', true)">Ja</button>
           <button onclick="answerQuestion('1b', false)">Nein</button>
         </div>
