--- a/personalien.html
+++ b/personalien.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <title>Protected Page</title>
+    <title>Personalien</title>
     <link rel="stylesheet" href="css/stylepage.css"/>
   </head>
 
@@ -37,6 +37,7 @@
         <p id="fehlermeldung"></p>
       </section>
 
+
       <footer>
         <div class="footer-nav">
           <a class="nav-item" href="willkommen.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
@@ -47,6 +48,8 @@
 
 
       <script type="module" src="js/profile.js"></script>
+
+      
     </div>
   </body>
   
