--- a/willkommen.html
+++ b/willkommen.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <title>Anmelden</title>
+    <title>Willkommen</title>
     <link rel="stylesheet" href="css/stylepage.css" />
   </head>
   <body>
