--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medizinische Behandlung</title>
+  <title>Medizinische Behandlung 1</title>
   <link rel="stylesheet" href="css/stylepage.css">
 </head>
 
