fertig.html, abschlussDownload.html und abschlussEmail.html neu hinzugefügt und verknüpft

--- a/uebersicht.html
+++ b/uebersicht.html
@@ -32,7 +32,7 @@
         <li>Autopsie </li>
         <li>Vollmachtsverfügung</li>
       </ul>
-      <button class="finish-button">Abschliessen</button>
+      <button class="finish-button" onclick="location.href='fertig.html';">Abschliessen</button>
     </div>
     </main>
 
