Fehlerbehebungen unter Anleitung Mail Beni Teil 1

--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -10,7 +10,7 @@
     <header>
       <div class="header-content">
         <h1>Medizinische Behandlung (2/2)</h1>
-        <a class="info-button" href="#">
+        <a class="info-button" href="video.html">
           <img src="images/infobutton.svg" alt="Info Button" />
         </a>
       </div>
@@ -65,6 +65,6 @@
 
   
   <script src="js/medbehandlung2.js"></script>
-  </body>
+<!-- <script src="js/protected.js"></script> -->  </body>
 </html>
 
