--- a/personalien.html
+++ b/personalien.html
@@ -11,12 +11,12 @@
       <header>
         <div class="header-content">
           <h1>Personalien</h1>
-          <a class="info-button" href="#">
+          <a class="info-button" href="video.html">
             <img src="images/infobutton.svg" alt="Info Button" />
           </a>
         </div>
         <a href="uebersicht.html" class="back-button">Zurück</a>
-        <a href="personalien.html" class="next-button">Weiter</a>
+        <a href="medizinische-behandlung_1.html" class="next-button">Weiter</a>
         <div class="header-line"></div>
       </header>
 
@@ -48,7 +48,7 @@
 
 
       <script type="module" src="js/profile.js"></script>
-
+<!-- <script src="js/protected.js"></script> -->
       
     </div>
   </body>
