--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     
     </div>
 
-    <form class="registerForm">
+    <form id="registerForm">
 
       <div class="registerEmail">
         <p>E-Mail</p>
