--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -13,7 +13,7 @@
     <header>
       <div class="header-content">
         <h1>Medizinische Behandlung (1/2)</h1>
-        <a class="info-button" href="#">
+        <a class="info-button" href="video.html">
             <img src="images/infobutton.svg" alt="Info Button" />
           </a>
       </div>
@@ -42,15 +42,18 @@
         <p id="fehlermeldung"></p>
       </section>
 
-    <footer>
-      <div class="footer-nav">
-        <a class="nav-item" href="#"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
-        <a class="nav-item" href="#"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
-        <a class="nav-item" href="#"><img src="images/navKonto.svg" /><span>Konto</span></a>
-      </div>
-    </footer>
+      <footer>
+        <div class="footer-nav">
+          <a class="nav-item" href="willkommen.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
+          <a class="nav-item" href="uebersicht.html"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
+          <a class="nav-item" href="personalien.html"><img src="images/navKonto.svg" /><span>Konto</span></a>
+        </div>
+      </footer>
+      
   </div>
   <script type="module" src="js/medizinische-behandlung_1.js"></script>
+<!-- <script src="js/protected.js"></script> -->
+
 </body>
 
 </html>
