--- a/uebersicht.html
+++ b/uebersicht.html
@@ -5,24 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ihre Übersicht</title>
   <link rel="stylesheet" href="css/stylepage.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
- <header>
-  <div class="header-content">
-    <h1>Ihre Übersicht</h1>
-    <a class="info-button" href="#">
-      <img src="images/infobutton.svg" alt="Info Button" />
-    </a>
-  </div>
-  <a href="personalien.html" class="next-button">Weiter</a>
-  <div class="header-line"></div>
-</header>
+  <div>
+    <header>
+      <div class="header-content">
+        <h1>Ihre Übersicht</h1>
+        <a class="info-button" href="video.html">
+          <img src="images/infobutton.svg" alt="Info Button" />
+        </a>
+      </div>
+      <a href="personalien.html" class="next-button">Weiter</a>
+      <div class="header-line"></div>
+    </header>
 
-    
     <main>
-      <div class= "uebersicht">
+      <div class="uebersicht">
       <ul class="list">
         <li><a href="personalien.html">Personalien </a></li>
         <li>Medizinische Behandlung </li>
@@ -37,12 +36,16 @@
     </main>
 
 
-      <footer>
+    <footer>
       <div class="footer-nav">
-        <a class="nav-item" href="#"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
-        <a class="nav-item" href="#"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
-        <a class="nav-item" href="#"><img src="images/navKonto.svg" /><span>Konto</span></a>
+        <a class="nav-item" href="willkommen.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
+        <a class="nav-item" href="uebersicht.html"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
+        <a class="nav-item" href="personalien.html"><img src="images/navKonto.svg" /><span>Konto</span></a>
       </div>
-      </footer>
+    </footer>
+    
+  </div>
+
+<!--  <script src="js/protected.js"></script> -->
 </body>
 </html>
