--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -8,51 +8,68 @@
   <link rel="stylesheet" href="css/stylepage.css">
 </head>
 
-<body>
+<body class="med-behandlung">
   <div class="container">
+
     <header>
       <div class="header-content">
         <h1>Medizinische Behandlung (1/2)</h1>
         <a class="info-button" href="video.html">
-            <img src="images/infobutton.svg" alt="Info Button" />
-          </a>
+          <img src="images/infobutton.svg" alt="Info Button" />
+        </a>
       </div>
       <a href="uebersicht.html" class="back-button">Zurück</a>
       <a href="personalien.html" class="next-button">Weiter</a>
       <div class="header-line"></div>
     </header>
+
     <main>
-      <body class="med-behandlung">
-      <div class="container">
       <h2>Werteerklärung</h2>
-      <p>Im Folgenden halte ich meine wichtigsten Wertvorstellungen,Überzeugungen 
-         und Glaubenssätze fest...</p>
-      </div>
+      <p>Im Folgenden halte ich meine wichtigsten Wertvorstellungen, Überzeugungen und Glaubenssätze fest...</p>
+
       <form action="api/medbehandlung1/createmedbehandlung1.php" method="POST">
-        <textarea name="leben" placeholder="Was macht mein Leben heute lebenswert?"></textarea>
-        <textarea name="lebensqualitaet" placeholder="Was bedeutet für Sie Lebensqualität?"></textarea>
-        <textarea name="sterben" placeholder="Was kommt Ihnen in den Sinn, wenn Sie ans Sterben denken?"></textarea>
-        <textarea name="behandlung"
+        <label for="leben" class="visually-hidden">Was macht mein Leben heute lebenswert?</label>
+        <textarea id="leben" name="leben" placeholder="Was macht mein Leben heute lebenswert?"></textarea>
+
+        <label for="lebensqualitaet" class="visually-hidden">Was bedeutet für Sie Lebensqualität?</label>
+        <textarea id="lebensqualitaet" name="lebensqualitaet" placeholder="Was bedeutet für Sie Lebensqualität?"></textarea>
+
+        <label for="sterben" class="visually-hidden">Was kommt Ihnen in den Sinn, wenn Sie ans Sterben denken?</label>
+        <textarea id="sterben" name="sterben" placeholder="Was kommt Ihnen in den Sinn, wenn Sie ans Sterben denken?"></textarea>
+
+        <label for="behandlung" class="visually-hidden">Gibt es Situationen, in denen Sie nicht mehr lebensverlängernd behandelt werden wollen?</label>
+        <textarea id="behandlung" name="behandlung"
           placeholder="Gibt es Situationen, in denen Sie nicht mehr lebensverlängernd behandelt werden wollen?"></textarea>
+
+        <section class="SaveButtons">
+          <button class="btnSave" type="submit">Speichern & Weiter</button>
+          <button class="btnSaveBack" type="button" onclick="location.href='uebersicht.html'">Zwischenspeichern & Beenden</button>
+          <p id="fehlermeldung"></p>
+        </section>
+      </form>
     </main>
 
-    <section class="SaveButtons">
-        <button class="btnSave" onclick="location.href='medbehandlung2.html'">Speichern & Weiter</button>
-        <button class="btnSaveBack" onclick="location.href='uebersicht.html'">Zwischenspeichern & Beenden</button>
-        <p id="fehlermeldung"></p>
-      </section>
+    <footer>
+      <div class="footer-nav">
+        <a class="nav-item" href="willkommen.html">
+          <img src="images/navWillkommen.svg" alt="Willkommen" />
+          <span>Willkommen</span>
+        </a>
+        <a class="nav-item" href="uebersicht.html">
+          <img src="images/navUebersicht.svg" alt="Übersicht" />
+          <span>Übersicht</span>
+        </a>
+        <a class="nav-item" href="personalien.html">
+          <img src="images/navKonto.svg" alt="Konto" />
+          <span>Konto</span>
+        </a>
+      </div>
+    </footer>
 
-      <footer>
-        <div class="footer-nav">
-          <a class="nav-item" href="willkommen.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
-          <a class="nav-item" href="uebersicht.html"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
-          <a class="nav-item" href="personalien.html"><img src="images/navKonto.svg" /><span>Konto</span></a>
-        </div>
-      </footer>
-      
   </div>
+
   <script type="module" src="js/medizinische-behandlung_1.js"></script>
-<!-- <script src="js/protected.js"></script> -->
+      <!-- <script src="js/protected.js"></script> -->
 
 </body>
 
