DB-Verbindung Personalien gefixt

--- a/uebersicht.html
+++ b/uebersicht.html
@@ -24,7 +24,7 @@
       <div class="uebersicht">
       <ul class="list">
         <li><a href="personalien.html">Personalien </a></li>
-        <li>Medizinische Behandlung </li>
+        <li><a href="medizinische-behandlung_1.html">Medizinische Behandlung</a> </li>
         <li>Religion/Spiritualität </li>
         <li>Sterbebegleitung</li>
         <li>Organe, Gewebe & Zellen </li>
