--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -18,8 +18,8 @@
           <img src="images/infobutton.svg" alt="Info Button" />
         </a>
       </div>
-      <a href="uebersicht.html" class="back-button">Zurück</a>
-      <a href="personalien.html" class="next-button">Weiter</a>
+      <a href="personalien.html" class="back-button">Zurück</a>
+      <a href="medbehandlung2.html" class="next-button">Weiter</a>
       <div class="header-line"></div>
     </header>
 
