--- a/personalien.html
+++ b/personalien.html
@@ -33,8 +33,8 @@
       </section>
 
       <section class="SaveButtons">
-        <button class="btnSave" onclick="location.href='medizinische-behandlung_1.html'">Speichern & Weiter</button>
-        <button class="btnSaveBack" onclick="location.href='uebersicht.html'">Zwischenspeichern & Beenden</button>
+        <button class="btnSave" data-next="medizinische-behandlung_1.html">Speichern & Weiter</button>
+        <button class="btnSaveBack" data-next="uebersicht.html">Zwischenspeichern & Beenden</button>
         <p id="fehlermeldung"></p>
       </section>
 
