--- a/abschlussDownload.html
+++ b/abschlussDownload.html
@@ -30,7 +30,7 @@
         </div>
     </footer>
 
-    <!-- <script src="js/protected.js"></script> -->
+    <script src="js/protected.js"></script>
 
   </body>
 </html>
