--- a/fertig.html
+++ b/fertig.html
@@ -26,6 +26,6 @@
         </div>
     </footer>
 
-<!-- <script src="js/protected.js"></script> -->
+    <script src="js/protected.js"></script>
   </body>
 </html>
