--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -66,6 +66,8 @@
 
   
   <script src="js/medbehandlung2.js"></script>
-<!-- <script src="js/protected.js"></script> -->  </body>
+  <script src="js/protected.js"></script>  
+
+</body>
 </html>
 
