--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -69,7 +69,7 @@
   </div>
 
   <script type="module" src="js/medizinische-behandlung_1.js"></script>
-      <!-- <script src="js/protected.js"></script> -->
+  <script src="js/protected.js"></script>
 
 </body>
 
