--- a/personalien.html
+++ b/personalien.html
@@ -53,7 +53,7 @@
     </div>
 
     <script type="module" src="js/profile.js"></script>
-    <!-- <script src="js/protected.js"></script> -->
+    <script src="js/protected.js"></script>
   </body>
   
 </html>
