--- a/abschlussEmail.html
+++ b/abschlussEmail.html
@@ -24,7 +24,7 @@
         </div>
     </footer>
 
-<!-- <script src="js/protected.js"></script> -->    
+<script src="js/protected.js"></script>    
 
   </body>
 </html>
