CSS Anpassungen (vorwiegend Buttons, Schriftgrössen und Margins)

--- a/abschlussDownload.html
+++ b/abschlussDownload.html
@@ -16,7 +16,7 @@
 
       <div>
         <a href="pdf/patientenverfuegung.pdf" download>
-          <button class="btnDownloadPdf">Meine_Patientenverfügung.pdf</button>
+          <button class="btnDownloadPdf">Patientenverfügung.pdf</button>
         </a>
       </div>
 
