--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -26,26 +26,42 @@
       <div id="form-container">
         <div class="question" data-id="1a">
           <p>a. Behandlung auf der Intensivstation</p>
-          <button onclick="answerQuestion('1a', true)">Ja</button>
-          <button onclick="answerQuestion('1a', false)">Nein</button>
+          <label>
+            <input type="radio" name="q1a" value="ja" /> Ja
+          </label>
+          <label>
+            <input type="radio" name="q1a" value="nein" /> Nein
+          </label>
         </div>
   
         <div class="question" data-id="1b" data-depends="1a">
           <p>b. Künstliche Beatmung über einen Schlauch (in der Regel über den Mund in die Luftröhre, medizinisch: Tubus, Intubation)</p>
-          <button onclick="answerQuestion('1b', true)">Ja</button>
-          <button onclick="answerQuestion('1b', false)">Nein</button>
+          <label>
+            <input type="radio" name="q1b" value="ja" /> Ja
+          </label>
+          <label>
+            <input type="radio" name="q1b" value="nein" /> Nein
+          </label>
         </div>
   
         <div class="question" data-id="1c">
           <p>c. Herz-Lungen-Wiederbelebung (Reanimation)</p>
-          <button onclick="answerQuestion('1c', true)">Ja</button>
-          <button onclick="answerQuestion('1c', false)">Nein</button>
+          <label>
+            <input type="radio" name="q1c" value="ja" /> Ja
+          </label>
+          <label>
+            <input type="radio" name="q1c" value="nein" /> Nein
+          </label>
         </div>
   
         <div class="question" data-id="1d">
           <p>d. Künstliche Ernährung / Flüssigkeit über Magensonde oder Vene</p>
-          <button onclick="answerQuestion('1d', true)">Ja</button>
-          <button onclick="answerQuestion('1d', false)">Nein</button>
+          <label>
+            <input type="radio" name="q1d" value="ja" /> Ja
+          </label>
+          <label>
+            <input type="radio" name="q1d" value="nein" /> Nein
+          </label>
         </div>
       </div>
       
