willkommenseite fertig design und startseite angefangen

--- a/willkommen.html
+++ b/willkommen.html
@@ -2,24 +2,20 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Willkommen</title>
     <link rel="stylesheet" href="css/stylepage.css" />
   </head>
   <body>
-    <div>
-    <img src="images/Logo_Patientenwille_Herz.png" alt="Patientenwille Logo" />
+    <div class="zentriert-alles">
+      <img src="images/Logo_Patientenwille_Herz.png" alt="Patientenwille Logo" class="zentriert" />
+      <h1>Willkommen bei Patienten Wille!</h1>
+      <p>Mit Ihrem Konto können Sie Ihre Patientenverfügung einfach und individuell zusammenstellen.</p>
+      <button class="btnaccount" onclick="location.href='login.html'">Ich habe bereits ein Konto</button>
+      <a class="btnOtherOption" href="register.html">Mein Konto anlegen</a>
     </div>
-
-    <h1>Willkommen bei Patienten Wille!</h1>
-
-    <p>Mit Ihrem Konto können Sie Ihre Patientenverfügung einfach und individuell zusammenstellen. Dabei werden Sie von uns Schritt für Schritt begleitet. </p>
-
-    <button id="btnSave" onclick="location.href='register.html'">Mein Konto anlegen</button>
-    <button id="btnSaveBack" onclick="location.href='login.html'">Ich habe bereits ein Konto</button>
-    
   </body>
 </html>
 
 
 
-   
