--- a/startseite.html
+++ b/startseite.html
@@ -7,18 +7,12 @@
     <link rel="stylesheet" href="css/stylepage.css">
 </head>
 <body>
-  <div class="container">
+  <div class="zentriert-alles">
     <img src="Images/willkommen.jpeg" alt="Willkommen" id="willkommen-bild">
-
-    <div class="textbereich">
       <h1>In wenigen Schritten zu Ihrer Patientenverfügung</h1>
       <p>Gerne erklären wir Ihnen in einem kurzen Erklärvideo, was Sie von unserer Dienstleistung erwarten dürfen.</p>
-
-      <div class="button-group">
         <button class="secondary-button" onclick="location.href='willkommen.html'">Überspringen</button>
         <button class="primary-button" onclick="location.href='willkommensvideo.html'">Video schauen</button>
-      </div>
-    </div>
   </div>
 
 </body>
