Logout-Button, Cursor=Pointer, Footer Willkommen-Link korrigiert

--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -58,7 +58,7 @@
 
   <footer>
     <div class="footer-nav">
-      <a class="nav-item" href="willkommen.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
+      <a class="nav-item" href="video.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
       <a class="nav-item" href="uebersicht.html"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
       <a class="nav-item" href="personalien.html"><img src="images/navKonto.svg" /><span>Konto</span></a>
     </div>
