--- a/medizinische-behandlung_1.html
+++ b/medizinische-behandlung_1.html
@@ -51,7 +51,7 @@
 
     <footer>
       <div class="footer-nav">
-        <a class="nav-item" href="willkommen.html">
+        <a class="nav-item" href="video.html">
           <img src="images/navWillkommen.svg" alt="Willkommen" />
           <span>Willkommen</span>
         </a>
