--- a/uebersicht.html
+++ b/uebersicht.html
@@ -16,6 +16,7 @@
           <img src="images/infobutton.svg" alt="Info Button" />
         </a>
       </div>
+      <a href="#" id="logoutBtn" class="logout-button">Logout</a>
       <a href="personalien.html" class="next-button">Weiter</a>
       <div class="header-line"></div>
     </header>
@@ -38,7 +39,7 @@
 
     <footer>
       <div class="footer-nav">
-        <a class="nav-item" href="willkommen.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
+        <a class="nav-item" href="video.html"><img src="images/navWillkommen.svg" /><span>Willkommen</span></a>
         <a class="nav-item" href="uebersicht.html"><img src="images/navUebersicht.svg" /><span>Übersicht</span></a>
         <a class="nav-item" href="personalien.html"><img src="images/navKonto.svg" /><span>Konto</span></a>
       </div>
@@ -47,5 +48,7 @@
   </div>
 
  <script src="js/protected.js"></script>
+ <script src="js/logout.js"></script>
+
 </body>
 </html>
