--- a/startseite.html
+++ b/startseite.html
@@ -6,13 +6,16 @@
     <title>Startseite</title>
     <link rel="stylesheet" href="css/stylepage.css">
 </head>
-<body>
-  <div class="zentriert-alles">
-    <img src="Images/willkommen.jpeg" alt="Willkommen" id="willkommen-bild">
-      <h1>In wenigen Schritten zu Ihrer Patientenverfügung</h1>
-      <p>Gerne erklären wir Ihnen in einem kurzen Erklärvideo, was Sie von unserer Dienstleistung erwarten dürfen.</p>
-        <button class="secondary-button" onclick="location.href='willkommen.html'">Überspringen</button>
-        <button class="primary-button" onclick="location.href='willkommensvideo.html'">Video schauen</button>
+<body class="startseite">
+    <div class="bild-container">
+      <img src="images/willkommen.jpeg" alt="Willkommen" id="willkommen-bild">
+    </div>
+    <div class="zentriert-alles">
+    <h1>In wenigen Schritten zu Ihrer Patientenverfügung</h1>
+    <p>Gerne erklären wir Ihnen in einem kurzen Erklärvideo, was Sie von unserer Dienstleistung erwarten dürfen.</p>
+    <button class="primary-button" onclick="location.href='willkommensvideo.html'">Video schauen</button>
+    <button class="secondary-button" onclick="location.href='willkommen.html'">Überspringen</button>
+   
   </div>
 
 </body>
