--- a/willkommen.html
+++ b/willkommen.html
@@ -6,8 +6,8 @@
     <title>Willkommen</title>
     <link rel="stylesheet" href="css/stylepage.css" />
   </head>
-  <body>
-    <div class="zentriert-alles">
+ <body class="willkommen">
+  <div class="zentriert-alles">
       <img src="images/Logo_Patientenwille_Herz.png" alt="Patientenwille Logo" class="zentriert" />
       <h1>Willkommen bei Patienten Wille!</h1>
       <p>Mit Ihrem Konto können Sie Ihre Patientenverfügung einfach und individuell zusammenstellen.</p>
