video seite gemacht

--- a/startseite.html
+++ b/startseite.html
@@ -13,7 +13,7 @@
     <div class="zentriert-alles">
     <h1>In wenigen Schritten zu Ihrer Patientenverfügung</h1>
     <p>Gerne erklären wir Ihnen in einem kurzen Erklärvideo, was Sie von unserer Dienstleistung erwarten dürfen.</p>
-    <button class="primary-button" onclick="location.href='willkommensvideo.html'">Video schauen</button>
+    <button class="primary-button" onclick="location.href='video.html'">Video schauen</button>
     <button class="secondary-button" onclick="location.href='willkommen.html'">Überspringen</button>
    
   </div>
