--- a/video.html
+++ b/video.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Willkommensvideo</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Willkommensvideo</title>
+  <link rel="stylesheet" href="css/stylepage.css" />
 </head>
 
 <body>
-    <video controls width="640" height="360">
-        <source src="videos/erklaervideo.mp4" type="video/mp4">
+  <div class="video-container">
+    <video controls>
+      <source src="videos/erklaervideo.mp4" type="video/mp4" />
     </video>
-
-    <button id="btnSave" onclick="location.href='login.html'">Weiter</button>
-
-
-
-    </div>
-    </footer>
-
+    <button class="primary-button" onclick="location.href='login.html'">Weiter</button>
+  </div>
 </body>
 </html>
