--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -21,7 +21,8 @@
     </header>
 
     <section id="medbehandlung2">
-      <h2>Therapieziel – ich möchte lebensverlängernde Massnahmen nur bei Erhaltung der Lebensqualität und wünsche folgende Behandlungen:</h2>
+      <h2>Therapieziel</h2>
+        <p>möchte lebensverlängernde Massnahmen nur bei Erhaltung der Lebensqualität und wünsche folgende Behandlungen:</span></p>
 
       <div id="form-container">
         <div class="question" data-id="1a">
