--- a/willkommen.html
+++ b/willkommen.html
@@ -9,10 +9,10 @@
  <body class="willkommen">
   <div class="zentriert-alles">
       <img src="images/Logo_Patientenwille_Herz.png" alt="Patientenwille Logo" class="zentriert" />
-      <h1>Willkommen bei Patienten Wille!</h1>
+      <h1>Willkommen bei<br>Patienten Wille!</h1>
       <p>Mit Ihrem Konto können Sie Ihre Patientenverfügung einfach und individuell zusammenstellen.</p>
-      <button class="btnaccount" onclick="location.href='login.html'">Ich habe bereits ein Konto</button>
-      <a class="btnOtherOption" href="register.html">Mein Konto anlegen</a>
+      <button class="btnaccount" onclick="location.href='login.html'">Anmelden</button>
+      <a class="btnOtherOption" href="register.html">Registrieren</a>
     </div>
   </body>
 </html>
