medbehandlung design abgeschlossen

--- a/medbehandlung2.html
+++ b/medbehandlung2.html
@@ -22,7 +22,9 @@
 
     <section id="medbehandlung2">
       <h2>Therapieziel</h2>
-        <p>möchte lebensverlängernde Massnahmen nur bei Erhaltung der Lebensqualität und wünsche folgende Behandlungen:</span></p>
+      <p class="unterzeile">
+        lebensverlängernde Massnahmen nur bei Erhaltung der Lebensqualität und wünsche folgende Behandlungen:
+      </p>
 
       <div id="form-container">
         <div class="question" data-id="1a">
